refresh searchbar, fixed responsibility
Also added autohide scrollbar in script,
new team option (in progress), fixed icons alignment,
added search icon to searchbar.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,31 +1,46 @@
-* {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-touch-callout: none;
-  -webkit-user-drag: none;
-  user-drag: none; }
-
-html {
-  scroll-behavior: smooth; }
-
 body {
   margin: 0;
+  overflow: hidden;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, 'Droid Sans', sans-serif;
   color: #CBC7FC;
   background: radial-gradient(circle, #14144b -40%, black 80%);
   background-size: 100vw 100vh; }
 
-.m-btn {
-  font-size: 3em;
-  margin: 3rem;
-  position: fixed;
-  z-index: 99;
-  transition: .5s; }
-  .m-btn:hover {
-    cursor: pointer;
-    transform: scale(1.1); }
+a {
+  color: #CBC7FC;
+  text-decoration: none; }
+
+section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%; }
+
+#home img {
+  max-width: 350px; }
+
+#home div {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  height: 300px;
+  width: 290px; }
+  #home div p {
+    padding: 0 .5rem; }
+  #home div a {
+    text-decoration: none;
+    font-weight: bold;
+    color: #9095f4; }
+    #home div a:hover, #home div a:focus {
+      outline: none;
+      text-decoration: underline wavy;
+      text-decoration-thickness: 3px;
+      text-underline-offset: .2rem; }
+  #home div h1, #home div p {
+    margin: 0; }
+  #home div h1 {
+    font-size: 7em; }
 
 nav {
   display: none;
@@ -38,43 +53,52 @@ nav {
   -webkit-backdrop-filter: blur(40px);
   backdrop-filter: blur(40px); }
   nav #box {
-    width: 500px; }
-    nav #box input {
-      width: calc(100% - 2rem);
-      display: inline;
-      background: rgba(50, 50, 50, 0.5);
-      padding: .43rem 1rem .27rem 1rem;
-      font-weight: bold;
+    width: 400px; }
+    nav #box div {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 3rem;
       color: #FEC8A7;
-      border: solid 1px #5e5e5e;
+      background: rgba(50, 50, 50, 0.7);
       border-radius: 10px;
+      transition: .5s; }
+    nav #box #search i {
+      padding: 0 1rem; }
+    nav #box #search input {
+      width: 100%;
+      margin: 3px 0 0 -4px;
+      padding: 0;
+      color: #FEC8A7;
+      background: none;
+      border: none;
+      font-weight: bold;
       line-height: 36px; }
-      nav #box input:focus {
+      nav #box #search input:focus {
         outline: none; }
     nav #box p {
       color: #8B949E;
       font-size: .9em;
       padding-left: 1.5rem; }
     nav #box a {
-      font-weight: bold;
-      text-decoration: none;
-      color: #FEC8A7;
       display: flex;
       gap: .5rem;
       width: calc(100% - 5rem);
+      font-weight: bolder;
+      color: #FEC8A7;
       padding: .6rem 2.5rem; }
       nav #box a:hover, nav #box a:focus {
         outline: none;
-        background: rgba(255, 255, 255, 0.05);
-        outline: solid 1px #5e5e5e;
-        border-radius: 10px; }
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 7px; }
       nav #box a:last-of-type {
         padding: .6rem 2.3rem;
         gap: .8rem; }
-    nav #box i {
-      padding-top: .1rem; }
-    nav #box .org {
-      margin-left: -.3em; }
+      nav #box a i {
+        padding-top: .1rem; }
+      nav #box a .org {
+        margin-left: -.3em; }
 
 #offer #box {
   display: flex;
@@ -83,18 +107,16 @@ nav {
     width: 20rem;
     height: 20rem;
     background: rgba(255, 255, 255, 0.1);
-    border-radius: 1rem; }
+    border-radius: 1rem;
+    text-align: center; }
     #offer #box div h1 {
-      font-size: 3em;
-      text-align: center; }
+      font-size: 3em; }
     #offer #box div .category {
-      text-align: center;
       color: #8B949E;
       font-size: .9em;
       font-weight: bold;
       margin: 0; }
     #offer #box div .text {
-      text-align: center;
       margin: 0;
       padding: 1rem 0 0 2rem;
       font-size: 2em;
@@ -102,7 +124,7 @@ nav {
       width: calc(100% - 4rem); }
     #offer #box div button {
       width: 80%;
-      margin: 2rem 0 0 10%;
+      margin-top: 2rem;
       background: rgba(255, 255, 255, 0.2);
       color: white;
       font-size: 1.2em;
@@ -113,6 +135,16 @@ nav {
       #offer #box div button:hover {
         cursor: pointer;
         background: #777; }
+
+#menu {
+  font-size: 3em;
+  margin: 3rem;
+  position: fixed;
+  z-index: 99;
+  transition: .5s; }
+  #menu:hover {
+    cursor: pointer;
+    transform: scale(1.1); }
 
 .loader {
   display: flex;
@@ -131,6 +163,69 @@ nav {
     border-right: 0.5vw solid #CBC7FC;
     animation: typewriter 0.3s steps(10), blink 0.5s steps(20) infinite; }
 
+.fa-bag-shopping {
+  margin-right: 2px; }
+
+.fa-code-branch,
+.fa-linkedin-in {
+  margin-right: 3px; }
+
+.fa-user-group {
+  margin-left: -4px;
+  margin-right: 1px; }
+
+.fa-house,
+.fa-people-group {
+  margin-left: -2px; }
+
+@media (max-width: 1100px) {
+  #menu {
+    margin: 2rem;
+    font-size: 2.5rem;
+    -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(2px); }
+  section, #offer > #box {
+    flex-direction: column; }
+  section {
+    height: 100vh; }
+  #offer #box {
+    gap: 0; }
+  #offer div {
+    transform: scale(0.9); }
+  nav #box {
+    width: 80vw; }
+  #home div {
+    margin-top: -4rem; } }
+
+html {
+  scroll-behavior: smooth; }
+
+* {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-drag: none;
+  user-drag: none; }
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  select,
+  textarea,
+  input {
+    font-size: 16px; } }
+
+::-webkit-scrollbar {
+  width: 25px; }
+
+::-webkit-scrollbar-track {
+  background: black; }
+
+::-webkit-scrollbar-thumb {
+  background: rgba(203, 199, 252, 0.7);
+  border-radius: 1rem;
+  border: solid 8px black; }
+
 @keyframes typewriter {
   0% {
     width: 0; }
@@ -142,85 +237,3 @@ nav {
     border-color: white; }
   to {
     border-color: black; } }
-
-section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: calc(100vh - 4rem);
-  width: calc(100% - 4rem);
-  padding: 2rem; }
-
-#home img {
-  max-width: 350px; }
-
-#home div {
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  height: 300px;
-  width: 290px; }
-  #home div p {
-    padding: 0 .5rem; }
-  #home div a {
-    font-weight: bold;
-    text-decoration: none;
-    color: #FEC8A7;
-    color: #9095f4; }
-    #home div a:hover, #home div a:focus {
-      outline: none;
-      text-decoration: underline wavy;
-      text-decoration-thickness: 3px;
-      text-underline-offset: .2rem; }
-  #home div h1, #home div p {
-    margin: 0; }
-  #home div h1 {
-    font-size: 7em; }
-
-::-webkit-scrollbar {
-  width: 25px; }
-
-::-webkit-scrollbar-track {
-  background: black;
-  border: solid 8px black; }
-
-::-webkit-scrollbar-thumb {
-  background: #CBC7FC;
-  border-radius: 1rem;
-  border: solid 8px black; }
-
-@media (max-width: 1300px) {
-  .m-btn {
-    font-size: 5em;
-    margin: 5rem; }
-  section, #offer > #box {
-    flex-direction: column; }
-  nav {
-    transform: scale(1.7); }
-    nav #box {
-      width: 50vw;
-      height: 50vw; }
-      nav #box a {
-        font-size: 1.2em; }
-  #offer #box div {
-    width: 50vw;
-    height: 50vw; }
-    #offer #box div h1 {
-      font-size: 5em;
-      margin: 3rem 0; }
-    #offer #box div .category {
-      font-size: 1.5em; }
-    #offer #box div .text {
-      font-size: 3.5em;
-      margin: 1rem 0; }
-    #offer #box div button {
-      height: 5rem;
-      font-size: 2em; }
-  #home div {
-    margin-top: -4rem;
-    height: auto;
-    width: 60%; }
-  #home p {
-    font-size: 2em; }
-  #home input {
-    height: 3rem; } }
